suite du ménage

--- a/langs/fr.json
+++ b/langs/fr.json
@@ -7,23 +7,24 @@
     "next":" prochain",
     "thedate":"Le ",
     "months":["janvier","février","mars","avril","mai","juin","juillet","août","septembre","octobre","novembre","décembre"],
-    "party":"Fête",
-    "arts":"Arts",
-    "theater":"Théâtre",
-    "music":"Musique",
-    "online":"En ligne",
-    "children":"Pour les enfants",
-    "shopping":"Shopping",
-    "cinema":"Cinéma",
-    "food":"Manger",
-    "wellbeing":"Bien-être",
-    "show":"Spectacle",
-    "sport":"Sport",
-    "literature":"Littérature",
-    "drink":"Boisson",
-    "gardening":"Jardinage",
-    "cause":"Cause",
-    "craft":"Artisanat",
+    "party":"🎉 Fête",
+    "arts":"🎨 Arts",
+    "theater":"🎭 Théâtre",
+    "music":"🎶 Musique",
+    "online":"💻 En ligne",
+    "children":"👧‍👦 Pour les enfants",
+    "shopping":"🛍 Shopping",
+    "cinema":"🎬 Cinéma",
+    "food":"🍽 Manger",
+    "wellbeing":"😌 Bien-être",
+    "show":"🎟 Spectacle",
+    "sport":"🎾 Sport",
+    "literature":"📚 Littérature",
+    "drink":"🍹 Boisson",
+    "gardening":"🌱 Jardinage",
+    "cause":"🎗 Cause",
+    "craft":"📐 Artisanat",
     "copied":"Copié !",
-    "organizeit":"Organise-le !"
+    "organizeit":"Organise-le !",
+    "noresults":"Tu ne trouves pas l'évent de tes rêves ?"
 }
