new categories + better importation from datatourisme

--- a/public/langs/fr.json
+++ b/public/langs/fr.json
@@ -29,6 +29,25 @@
     "gardening":"🌱 Jardinage",
     "cause":"🎗 Cause",
     "craft":"📐 Artisanat",
+    "exhibition":"🖼 Exposition",
+    "dance":"💃 Danse",
+    "festival":"🎪 Festival",
+    "market":"🛒 Marché",
+    "museum":"🏛 Musée",
+    "outdoor":"🏞 Extérieur",
+    "tour":"🚶‍♀️ Visite",
+    "workshop":"🛠 Atelier",
+    "garden":"🌳 Jardin",
+    "holiday":"🏖 Vacances",
+    "free":"🆓 Gratuit",
+    "parade":"🎇 Parade",
+    "fair":"🎡 Foire",
+    "religion":"🙏 Religion",
+    "science":"🔬 Science",
+    "fashion":"👗 Mode",
+    "seminar":"💼 Séminaire",
+    "videogame":"🎮 Jeu vidéo",
+    "boardgame":"🎲 Jeu de société",
     "copied":"Copié !",
     "organizeit":"Organise-le !",
     "noresults":"Tu ne trouves pas l'évent de tes rêves ?",
