lang setting + full translatable

--- a/public/langs/en.json
+++ b/public/langs/en.json
@@ -29,10 +29,48 @@
     "gardening":"🌱 Gardening",
     "cause":"🎗 Cause",
     "craft":"📐 Craft",
+    "exhibition":"🖼 Exhibition",
+    "dance":"💃 Dance",
+    "festival":"🎪 Festival",
+    "market":"🛒 Market",
+    "museum":"🏛 Museum",
+    "outdoor":"🏞 Outdoor",
+    "tour":"🚶‍♀️ Tour",
+    "workshop":"🛠 Workshop",
+    "garden":"🌳 Garden",
+    "holiday":"🏖 Holiday",
+    "free":"🆓 Free",
+    "parade":"🎇 Parade",
+    "fair":"🎡 Fair",
+    "religion":"🙏 Religion",
+    "science":"🔬 Science",
+    "fashion":"👗 Fashion",
+    "seminar":"💼 Seminar",
+    "videogame":"🎮 Video game",
+    "boardgame":"🎲 Board game",
     "copied":"Copied!",
     "organizeit":"Organize it!",
     "noresults":"You don't find the event of your dreams?",
     "notloggedin":"You are not logged in",
     "login":"Log in",
-    "logintofav":"Log in to save your favorites events"
+    "logintofav":"Log in to save your favorites events",
+    "logout":"Log out",
+    "nofavorites":"You don't have any favorite events yet",
+    "searchthem":"Search for them",
+    "addtofav":"Add to favorites",
+    "showonmap":"Show on map",
+    "alldate":"Any day",
+    "week":"This week",
+    "nextweek":"Next week",
+    "month":"This month",
+    "alltime":"Any time",
+    "now":"Maintenant",
+    "morning":"The morning",
+    "afternoon":"The afternoon",
+    "evening":"The evening",
+    "night":"The night",
+    "categories":"Categories",
+    "searchevents":"Search events...",
+    "moreinfo":"More info",
+    "language":"Language"
 }
