--- a/public/langs/fr.json
+++ b/public/langs/fr.json
@@ -57,5 +57,21 @@
     "logout":"Se déconnecter",
     "nofavorites":"Tu n'as pas encore d'événements favoris",
     "searchthem":"Recherches-en !",
-    "notloggedin":"Tu n'es pas connecté"
+    "notloggedin":"Tu n'es pas connecté",
+    "addtofav":"Ajouter à mes favoris",
+    "showonmap":"Afficher sur la carte",
+    "alldate":"Toute période",
+    "week":"Cette semaine",
+    "nextweek":"La semaine prochaine",
+    "month":"Ce mois-ci",
+    "alltime":"N'importe quand",
+    "now":"Maintenant",
+    "morning":"Le matin",
+    "afternoon":"L'après-midi",
+    "evening":"En soirée",
+    "night":"La nuit",
+    "categories":"Catégories",
+    "searchevents":"Rechercher des évents...",
+    "moreinfo":"Plus d'infos",
+    "language":"Langue"
 }
