ajout de la météo

--- a/public/langs/en.json
+++ b/public/langs/en.json
@@ -1,9 +1,9 @@
 {
-    "orga": "Organize",
-    "search": "Search",
-    "map": "Map",
-    "fav": "Favorites",
-    "me": "Me",
+    "orga":"Organize",
+    "search":"Search",
+    "map":"Map",
+    "fav":"Favorites",
+    "me":"Me",
     "yesterday":"Yesterday",
     "past":"Past",
     "today":"Today",
@@ -73,5 +73,34 @@
     "language":"Language",
     "at":"at",
     "from":"from",
-    "to":"to"
+    "to":"to",
+    "weather":"Weather",
+    "clear-sky":"Clear sky",
+    "mainly-clear":"Mainly clear",
+    "partly-cloudy":"Partly cloudy",
+    "overcast":"Overcast",
+    "fog":"Fog",
+    "depositing-rime-fog":"Depositing rime fog",
+    "light-drizzle":"Light drizzle",
+    "moderate-drizzle":"Moderate drizzle",
+    "dense-drizzle":"Dense drizzle",
+    "light-freezin":"Light freezing drizzle",
+    "dense freezin":"Dense freezing drizzle",
+    "slight-rain":"Slight rain",
+    "moderate-rain":"Moderate rain",
+    "heavy-rain":"Heavy rain",
+    "light-freezing rain":"Light freezing rain",
+    "heavy-freezing rain":"Heavy freezing rain",
+    "slight-snowfall":"Slight snowfall",
+    "moderate-snowfall":"Moderate snowfall",
+    "heavy-snowfall":"Heavy snowfall",
+    "snow-grains":"Snow grains",
+    "slight-rain-showers":"Slight rain showers",
+    "moderate-rain-showers":"Moderate rain showers",
+    "violent-rain-showers":"Violent rain showers",
+    "slight-snow-showers":"Slight snow showers",
+    "heavy-snow-showers":"Heavy snow showers",
+    "thunderstorm":"Thunderstorm",
+    "thunderstorm-with-slight-hail":"Thunderstorm with slight hail",
+    "thunderstorm-with-heavy-hail":"Thunderstorm with heavy hail"
 }
