--- a/public/langs/fr.json
+++ b/public/langs/fr.json
@@ -1,9 +1,9 @@
 {
-    "orga": "Organiser",
-    "search": "Rechercher",
-    "map": "Carte",
-    "fav": "Favoris",
-    "me": "Moi",
+    "orga":"Organiser",
+    "search":"Rechercher",
+    "map":"Carte",
+    "fav":"Favoris",
+    "me":"Moi",
     "yesterday":"Hier",
     "past":"Passé",
     "today":"Aujourd'hui",
@@ -74,5 +74,34 @@
     "language":"Langue",
     "at":"à",
     "from":"de",
-    "to":"à"
+    "to":"à",
+    "weather":"Météo",
+    "clear-sky":"Ciel clair",
+    "mainly-clear":"Majoritairement clair",
+    "partly-cloudy":"Partiellement nuageux",
+    "overcast":"Couvert",
+    "fog":"Brouillard",
+    "depositing-rime-fog":"Brouillard givrant",
+    "light-drizzle":"Légère bruine",
+    "moderate-drizzle":"Bruine modérée",
+    "dense-drizzle":"Bruine dense",
+    "light-freezin":"Légère bruine verglaçante",
+    "dense freezin":"Bruine verglaçante dense",
+    "slight-rain":"Légère pluie",
+    "moderate-rain":"Pluie modérée",
+    "heavy-rain":"Forte pluie",
+    "light-freezing rain":"Légère pluie verglaçante",
+    "heavy-freezing rain":"Pluie verglaçante forte",
+    "slight-snowfall":"Légère chute de neige",
+    "moderate-snowfall":"Chute de neige modérée",
+    "heavy-snowfall":"Forte chute de neige",
+    "snow-grains":"Grains de neige",
+    "slight-rain-showers":"Légères averses",
+    "moderate-rain-showers":"Averses modérées",
+    "violent-rain-showers":"Averses violentes",
+    "slight-snow-showers":"Légères averses de neige",
+    "heavy-snow-showers":"Averses de neige fortes",
+    "thunderstorm":"Orage",
+    "thunderstorm-with-slight-hail":"Orage avec légères chutes de grêle",
+    "thunderstorm-with-heavy-hail":"Orage avec fortes chutes de grêle"
 }
