--- a/public/langs/fr.json
+++ b/public/langs/fr.json
@@ -104,5 +104,9 @@
     "thunderstorm":"Orage",
     "thunderstorm-with-slight-hail":"Orage avec légères chutes de grêle",
     "thunderstorm-with-heavy-hail":"Orage avec fortes chutes de grêle",
-    "unknown":"Inconnue"
+    "unknown":"Inconnue",
+    "status":["Inconnu","Programmé","Reprogrammé","Déplacé en ligne","Reporté","Complet","Annulé"],
+    "by":"par",
+    "contact":"Contact",
+    "registration":"Inscription"
 }
