amélioration des recherches par dates et horaires - selection de dates/horaires min/max

--- a/public/langs/en.json
+++ b/public/langs/en.json
@@ -57,9 +57,9 @@
     "searchthem":"Search for them",
     "addtofav":"Add to favorites",
     "showonmap":"Show on map",
+    "fromtoday":"From today",
     "alldate":"Any day",
     "week":"This week",
-    "nextweek":"Next week",
     "month":"This month",
     "alltime":"Any time",
     "now":"Maintenant",
