--- a/public/langs/fr.json
+++ b/public/langs/fr.json
@@ -58,9 +58,9 @@
     "notloggedin":"Tu n'es pas connecté",
     "addtofav":"Ajouter à mes favoris",
     "showonmap":"Afficher sur la carte",
+    "fromtoday":"À venir",
     "alldate":"Toute période",
     "week":"Cette semaine",
-    "nextweek":"La semaine prochaine",
     "month":"Ce mois-ci",
     "alltime":"N'importe quand",
     "now":"Maintenant",
