--- a/public/langs/en.json
+++ b/public/langs/en.json
@@ -56,6 +56,7 @@
     "nofavorites":"You don't have any favorite events yet",
     "searchthem":"Search for them",
     "addtofav":"Add to favorites",
+    "removefromfav":"Remove from favorites",
     "showonmap":"Show on map",
     "fromtoday":"From today",
     "alldate":"Any day",
