--- a/public/langs/fr.json
+++ b/public/langs/fr.json
@@ -57,6 +57,7 @@
     "searchthem":"Recherches-en !",
     "notloggedin":"Tu n'es pas connecté",
     "addtofav":"Ajouter à mes favoris",
+    "removefromfav":"Retirer de mes favoris",
     "showonmap":"Afficher sur la carte",
     "fromtoday":"À venir",
     "alldate":"Toute période",
