Add search fields : sorts and geolocation - sort select, geolocation and max distance inputs in search view - sorting events and geolocation in back - fix add favorite bug - move mapbox token to .env

--- a/public/langs/en.json
+++ b/public/langs/en.json
@@ -108,5 +108,9 @@
     "status":["Unknown","Programmed","Rescheduled","Moved online","Postponed","Full","Cancelled"],
     "by":"by",
     "contact":"Contact",
-    "registration":"Registration"
+    "registration":"Registration",
+    "sortbydate":"Sort by date",
+    "sortbyrelevance":"Sort by relevance",
+    "sortbypopularity":"Sort by popularity",
+    "sortbydistance":"Sort by distance"
 }
