ajout langue du navigateur

--- a/public/langs/en.json
+++ b/public/langs/en.json
@@ -72,6 +72,7 @@
     "searchevents":"Search events...",
     "moreinfo":"More info",
     "language":"Language",
+    "navigatorlanguage":"Navigator language",
     "at":"at",
     "from":"from",
     "to":"to",
