--- a/public/langs/fr.json
+++ b/public/langs/fr.json
@@ -73,6 +73,7 @@
     "searchevents":"Rechercher des évents...",
     "moreinfo":"Plus d'infos",
     "language":"Langue",
+    "navigatorlanguage": "Langue du navigateur",
     "at":"à",
     "from":"de",
     "to":"à",
