--- a/front/public/langs/fr.json
+++ b/front/public/langs/fr.json
@@ -8,6 +8,13 @@
     "fav": "Favoris",
     "me": "Moi",
 
+    "home": "Accueil",
+    "popular": "Populaires",
+    "relevant": "Pertinents",
+    "soon": "Bientôt",
+    "nearby": "À proximité",
+    "view_more": "Voir plus",
+
     "categories": "Catégories",
     "eg": "ex.",
     "party": "Fête",
