ajout de la prise en charge PWA avec installation de l'application

--- a/front/public/langs/en.json
+++ b/front/public/langs/en.json
@@ -121,5 +121,6 @@
     "logginginfailed": "Connection failed",
     "retry": "Retry",
     "ok": "OK",
-    "non representative": "Non representative image"
+    "non representative": "Non representative image",
+    "install app": "Install the app"
 }
