front: fix placeholder barre de recherche

--- a/front/public/langs/en.json
+++ b/front/public/langs/en.json
@@ -122,5 +122,6 @@
     "retry": "Retry",
     "ok": "OK",
     "non representative": "Non representative image",
-    "install app": "Install the app"
+    "install app": "Install the app",
+    "eg": "e.g."
 }
