--- a/front/public/langs/fr.json
+++ b/front/public/langs/fr.json
@@ -122,5 +122,6 @@
     "retry": "Réessayer",
     "ok": "OK",
     "non representative": "Image non représentative",
-    "install app": "Installer l'appli"
+    "install app": "Installer l'appli",
+    "eg": "e.g."
 }
