front: ajout d'une section "à propos"

--- a/front/public/langs/fr.json
+++ b/front/public/langs/fr.json
@@ -1,120 +1,128 @@
 {
-    "orga":"Organiser",
-    "search":"Rechercher",
-    "map":"Carte",
-    "fav":"Favoris",
-    "me":"Moi",
-    "yesterday":"Hier",
-    "past":"Passé",
-    "today":"Aujourd'hui",
-    "tomorrow":"Demain",
-    "next":" prochain",
-    "thedate":"Le ",
-    "party":"🎉 Fête",
-    "arts":"🎨 Arts",
-    "theater":"🎭 Théâtre",
-    "music":"🎶 Musique",
-    "online":"💻 En ligne",
-    "children":"👧‍👦 Pour les enfants",
-    "shopping":"🛍 Shopping",
-    "cinema":"🎬 Cinéma",
-    "food":"🍽 Manger",
-    "wellbeing":"😌 Bien-être",
-    "show":"🎟 Spectacle",
-    "sport":"🎾 Sport",
-    "literature":"📚 Littérature",
-    "drink":"🍹 Boisson",
-    "gardening":"🌱 Jardinage",
-    "cause":"🎗 Cause",
-    "craft":"📐 Artisanat",
-    "exhibition":"🖼 Exposition",
-    "dance":"💃 Danse",
-    "festival":"🎪 Festival",
-    "market":"🛒 Marché",
-    "museum":"🏛 Musée",
-    "outdoor":"🏞 Extérieur",
-    "tour":"🚶‍♀️ Visite",
-    "workshop":"🛠 Atelier",
-    "garden":"🌳 Jardin",
-    "holiday":"🏖 Vacances",
-    "free":"🆓 Gratuit",
-    "parade":"🎇 Parade",
-    "fair":"🎡 Foire",
-    "religion":"🙏 Religion",
-    "science":"🔬 Science",
-    "fashion":"👗 Mode",
-    "seminar":"💼 Séminaire",
-    "videogame":"🎮 Jeu vidéo",
-    "boardgame":"🎲 Jeu de société",
-    "copied":"Copié !",
-    "organizeit":"Organise-le !",
-    "noresults":"Tu ne trouves pas l'évent de tes rêves ?",
-    "login":"Se connecter",
-    "logintofav":"Connecte-toi pour enregister tes événements préférés",
-    "invalid":"Nom d'utilisateur ou mot de passe invalide",
-    "logout":"Se déconnecter",
-    "nofavorites":"Tu n'as pas encore d'événements favoris",
-    "searchthem":"Recherches-en !",
-    "notloggedin":"Tu n'es pas connecté",
-    "addtofav":"Ajouter à mes favoris",
-    "removefromfav":"Retirer de mes favoris",
-    "showonmap":"Afficher sur la carte",
-    "fromtoday":"À venir",
-    "alldate":"Toute période",
-    "week":"Cette semaine",
-    "month":"Ce mois-ci",
-    "alltime":"N'importe quand",
-    "now":"Maintenant",
-    "morning":"Le matin",
-    "afternoon":"L'après-midi",
-    "evening":"En soirée",
-    "night":"La nuit",
-    "categories":"Catégories",
-    "searchevents":"Rechercher des évents...",
-    "moreinfo":"Plus d'infos",
-    "language":"Langue",
+    "orga": "Organiser",
+    "search": "Rechercher",
+    "map": "Carte",
+    "fav": "Favoris",
+    "me": "Moi",
+    "yesterday": "Hier",
+    "past": "Passé",
+    "today": "Aujourd'hui",
+    "tomorrow": "Demain",
+    "next": " prochain",
+    "thedate": "Le ",
+    "party": "🎉 Fête",
+    "arts": "🎨 Arts",
+    "theater": "🎭 Théâtre",
+    "music": "🎶 Musique",
+    "online": "💻 En ligne",
+    "children": "👧‍👦 Pour les enfants",
+    "shopping": "🛍 Shopping",
+    "cinema": "🎬 Cinéma",
+    "food": "🍽 Manger",
+    "wellbeing": "😌 Bien-être",
+    "show": "🎟 Spectacle",
+    "sport": "🎾 Sport",
+    "literature": "📚 Littérature",
+    "drink": "🍹 Boisson",
+    "gardening": "🌱 Jardinage",
+    "cause": "🎗 Cause",
+    "craft": "📐 Artisanat",
+    "exhibition": "🖼 Exposition",
+    "dance": "💃 Danse",
+    "festival": "🎪 Festival",
+    "market": "🛒 Marché",
+    "museum": "🏛 Musée",
+    "outdoor": "🏞 Extérieur",
+    "tour": "🚶‍♀️ Visite",
+    "workshop": "🛠 Atelier",
+    "garden": "🌳 Jardin",
+    "holiday": "🏖 Vacances",
+    "free": "🆓 Gratuit",
+    "parade": "🎇 Parade",
+    "fair": "🎡 Foire",
+    "religion": "🙏 Religion",
+    "science": "🔬 Science",
+    "fashion": "👗 Mode",
+    "seminar": "💼 Séminaire",
+    "videogame": "🎮 Jeu vidéo",
+    "boardgame": "🎲 Jeu de société",
+    "copied": "Copié !",
+    "organizeit": "Organise-le !",
+    "noresults": "Tu ne trouves pas l'évent de tes rêves ?",
+    "login": "Se connecter",
+    "logintofav": "Connecte-toi pour enregister tes événements préférés",
+    "invalid": "Nom d'utilisateur ou mot de passe invalide",
+    "logout": "Se déconnecter",
+    "nofavorites": "Tu n'as pas encore d'événements favoris",
+    "searchthem": "Recherches-en !",
+    "notloggedin": "Tu n'es pas connecté",
+    "addtofav": "Ajouter à mes favoris",
+    "removefromfav": "Retirer de mes favoris",
+    "showonmap": "Afficher sur la carte",
+    "fromtoday": "À venir",
+    "alldate": "Toute période",
+    "week": "Cette semaine",
+    "month": "Ce mois-ci",
+    "alltime": "N'importe quand",
+    "now": "Maintenant",
+    "morning": "Le matin",
+    "afternoon": "L'après-midi",
+    "evening": "En soirée",
+    "night": "La nuit",
+    "categories": "Catégories",
+    "searchevents": "Rechercher des évents...",
+    "moreinfo": "Plus d'infos",
+    "language": "Langue",
     "navigatorlanguage": "Langue du navigateur",
-    "at":"à",
-    "from":"de",
-    "to":"à",
-    "weather":"Météo",
-    "clear-sky":"Ciel clair",
-    "mainly-clear":"Majoritairement clair",
-    "partly-cloudy":"Partiellement nuageux",
-    "overcast":"Couvert",
-    "fog":"Brouillard",
-    "depositing-rime-fog":"Brouillard givrant",
-    "light-drizzle":"Légère bruine",
-    "moderate-drizzle":"Bruine modérée",
-    "dense-drizzle":"Bruine dense",
-    "light-freezin":"Légère bruine verglaçante",
-    "dense freezin":"Bruine verglaçante dense",
-    "slight-rain":"Légère pluie",
-    "moderate-rain":"Pluie modérée",
-    "heavy-rain":"Forte pluie",
-    "light-freezing rain":"Légère pluie verglaçante",
-    "heavy-freezing rain":"Pluie verglaçante forte",
-    "slight-snowfall":"Légère chute de neige",
-    "moderate-snowfall":"Chute de neige modérée",
-    "heavy-snowfall":"Forte chute de neige",
-    "snow-grains":"Grains de neige",
-    "slight-rain-showers":"Légères averses",
-    "moderate-rain-showers":"Averses modérées",
-    "violent-rain-showers":"Averses violentes",
-    "slight-snow-showers":"Légères averses de neige",
-    "heavy-snow-showers":"Averses de neige fortes",
-    "thunderstorm":"Orage",
-    "thunderstorm-with-slight-hail":"Orage avec légères chutes de grêle",
-    "thunderstorm-with-heavy-hail":"Orage avec fortes chutes de grêle",
-    "unknown":"Inconnue",
-    "status":["Inconnu","Programmé","Reprogrammé","Déplacé en ligne","Reporté","Complet","Annulé"],
-    "by":"par",
-    "contact":"Contact",
-    "registration":"Inscription",
-    "sortbydate":"Trier par date",
-    "sortbyrelevance":"Trier par pertinence",
-    "sortbypopularity":"Trier par popularité",
-    "sortbydistance":"Trier par distance",
+    "at": "à",
+    "from": "de",
+    "to": "à",
+    "weather": "Météo",
+    "clear-sky": "Ciel clair",
+    "mainly-clear": "Majoritairement clair",
+    "partly-cloudy": "Partiellement nuageux",
+    "overcast": "Couvert",
+    "fog": "Brouillard",
+    "depositing-rime-fog": "Brouillard givrant",
+    "light-drizzle": "Légère bruine",
+    "moderate-drizzle": "Bruine modérée",
+    "dense-drizzle": "Bruine dense",
+    "light-freezin": "Légère bruine verglaçante",
+    "dense freezin": "Bruine verglaçante dense",
+    "slight-rain": "Légère pluie",
+    "moderate-rain": "Pluie modérée",
+    "heavy-rain": "Forte pluie",
+    "light-freezing rain": "Légère pluie verglaçante",
+    "heavy-freezing rain": "Pluie verglaçante forte",
+    "slight-snowfall": "Légère chute de neige",
+    "moderate-snowfall": "Chute de neige modérée",
+    "heavy-snowfall": "Forte chute de neige",
+    "snow-grains": "Grains de neige",
+    "slight-rain-showers": "Légères averses",
+    "moderate-rain-showers": "Averses modérées",
+    "violent-rain-showers": "Averses violentes",
+    "slight-snow-showers": "Légères averses de neige",
+    "heavy-snow-showers": "Averses de neige fortes",
+    "thunderstorm": "Orage",
+    "thunderstorm-with-slight-hail": "Orage avec légères chutes de grêle",
+    "thunderstorm-with-heavy-hail": "Orage avec fortes chutes de grêle",
+    "unknown": "Inconnue",
+    "status": [
+        "Inconnu",
+        "Programmé",
+        "Reprogrammé",
+        "Déplacé en ligne",
+        "Reporté",
+        "Complet",
+        "Annulé"
+    ],
+    "by": "par",
+    "contact": "Contact",
+    "registration": "Inscription",
+    "sortbydate": "Trier par date",
+    "sortbyrelevance": "Trier par pertinence",
+    "sortbypopularity": "Trier par popularité",
+    "sortbydistance": "Trier par distance",
     "loginwith": "Se connecter avec",
     "loggingin": "Connexion...",
     "loggedin": "Connecté !",
@@ -122,6 +130,14 @@
     "retry": "Réessayer",
     "ok": "OK",
     "non representative": "Image non représentative",
-    "install app": "Installer l'appli",
-    "eg": "e.g."
+    "install_app": "Installer l'appli",
+    "eg": "e.g.",
+    "about": "À propos",
+    "about_text": [
+        "Que faire ce soir ? Où sortir ce week-end ? Quels événements sont organisés près de chez moi ?",
+        "L'application Évents te permet de trouver des événements près de chez toi, de les enregistrer dans tes favoris et de les partager avec tes amis.",
+        "Évents est une plateforme ouverte et collaborative donc certaines informations peuvent être incorrectes.",
+        "Si tu as des questions, des suggestions ou des commentaires, n'hésite pas à nous contacter à l'adresse suivante :"
+    ],
+    "all_rights_reserved": "Tous droits réservés"
 }
