--- a/front/public/langs/en.json
+++ b/front/public/langs/en.json
@@ -1,120 +1,128 @@
 {
-    "orga":"Organize",
-    "search":"Search",
-    "map":"Map",
-    "fav":"Favorites",
-    "me":"Me",
-    "yesterday":"Yesterday",
-    "past":"Past",
-    "today":"Today",
-    "tomorrow":"Tomorrow",
-    "next":" next",
-    "thedate":"The ",
-    "party":"🎉 Party",
-    "arts":"🎨 Arts",
-    "theater":"🎭 Theater",
-    "music":"🎶 Music",
-    "online":"💻 Online",
-    "children":"👧‍👦 For children",
-    "shopping":"🛍 Shopping",
-    "cinema":"🎬 Cinema",
-    "food":"🍽 Food",
-    "wellbeing":"😌 Well-being",
-    "show":"🎟 Show",
-    "sport":"🎾 Sport",
-    "literature":"📚 Literature",
-    "drink":"🍹 Drink",
-    "gardening":"🌱 Gardening",
-    "cause":"🎗 Cause",
-    "craft":"📐 Craft",
-    "exhibition":"🖼 Exhibition",
-    "dance":"💃 Dance",
-    "festival":"🎪 Festival",
-    "market":"🛒 Market",
-    "museum":"🏛 Museum",
-    "outdoor":"🏞 Outdoor",
-    "tour":"🚶‍♀️ Tour",
-    "workshop":"🛠 Workshop",
-    "garden":"🌳 Garden",
-    "holiday":"🏖 Holiday",
-    "free":"🆓 Free",
-    "parade":"🎇 Parade",
-    "fair":"🎡 Fair",
-    "religion":"🙏 Religion",
-    "science":"🔬 Science",
-    "fashion":"👗 Fashion",
-    "seminar":"💼 Seminar",
-    "videogame":"🎮 Video game",
-    "boardgame":"🎲 Board game",
-    "copied":"Copied!",
-    "organizeit":"Organize it!",
-    "noresults":"You don't find the event of your dreams?",
-    "notloggedin":"You are not logged in",
-    "login":"Log in",
-    "logintofav":"Log in to save your favorites events",
-    "invalid":"Invalid username or password",
-    "logout":"Log out",
-    "nofavorites":"You don't have any favorite events yet",
-    "searchthem":"Search for them",
-    "addtofav":"Add to favorites",
-    "removefromfav":"Remove from favorites",
-    "showonmap":"Show on map",
-    "fromtoday":"From today",
-    "alldate":"Any day",
-    "week":"This week",
-    "month":"This month",
-    "alltime":"Any time",
-    "now":"Now",
-    "morning":"The morning",
-    "afternoon":"The afternoon",
-    "evening":"The evening",
-    "night":"The night",
-    "categories":"Categories",
-    "searchevents":"Search events...",
-    "moreinfo":"More info",
-    "language":"Language",
-    "navigatorlanguage":"Navigator language",
-    "at":"at",
-    "from":"from",
-    "to":"to",
-    "weather":"Weather",
-    "clear-sky":"Clear sky",
-    "mainly-clear":"Mainly clear",
-    "partly-cloudy":"Partly cloudy",
-    "overcast":"Overcast",
-    "fog":"Fog",
-    "depositing-rime-fog":"Depositing rime fog",
-    "light-drizzle":"Light drizzle",
-    "moderate-drizzle":"Moderate drizzle",
-    "dense-drizzle":"Dense drizzle",
-    "light-freezin":"Light freezing drizzle",
-    "dense freezin":"Dense freezing drizzle",
-    "slight-rain":"Slight rain",
-    "moderate-rain":"Moderate rain",
-    "heavy-rain":"Heavy rain",
-    "light-freezing rain":"Light freezing rain",
-    "heavy-freezing rain":"Heavy freezing rain",
-    "slight-snowfall":"Slight snowfall",
-    "moderate-snowfall":"Moderate snowfall",
-    "heavy-snowfall":"Heavy snowfall",
-    "snow-grains":"Snow grains",
-    "slight-rain-showers":"Slight rain showers",
-    "moderate-rain-showers":"Moderate rain showers",
-    "violent-rain-showers":"Violent rain showers",
-    "slight-snow-showers":"Slight snow showers",
-    "heavy-snow-showers":"Heavy snow showers",
-    "thunderstorm":"Thunderstorm",
-    "thunderstorm-with-slight-hail":"Thunderstorm with slight hail",
-    "thunderstorm-with-heavy-hail":"Thunderstorm with heavy hail",
-    "unknown":"Unknown",
-    "status":["Unknown","Programmed","Rescheduled","Moved online","Postponed","Full","Cancelled"],
-    "by":"by",
-    "contact":"Contact",
-    "registration":"Registration",
-    "sortbydate":"Sort by date",
-    "sortbyrelevance":"Sort by relevance",
-    "sortbypopularity":"Sort by popularity",
-    "sortbydistance":"Sort by distance",
+    "orga": "Organize",
+    "search": "Search",
+    "map": "Map",
+    "fav": "Favorites",
+    "me": "Me",
+    "yesterday": "Yesterday",
+    "past": "Past",
+    "today": "Today",
+    "tomorrow": "Tomorrow",
+    "next": " next",
+    "thedate": "The ",
+    "party": "🎉 Party",
+    "arts": "🎨 Arts",
+    "theater": "🎭 Theater",
+    "music": "🎶 Music",
+    "online": "💻 Online",
+    "children": "👧‍👦 For children",
+    "shopping": "🛍 Shopping",
+    "cinema": "🎬 Cinema",
+    "food": "🍽 Food",
+    "wellbeing": "😌 Well-being",
+    "show": "🎟 Show",
+    "sport": "🎾 Sport",
+    "literature": "📚 Literature",
+    "drink": "🍹 Drink",
+    "gardening": "🌱 Gardening",
+    "cause": "🎗 Cause",
+    "craft": "📐 Craft",
+    "exhibition": "🖼 Exhibition",
+    "dance": "💃 Dance",
+    "festival": "🎪 Festival",
+    "market": "🛒 Market",
+    "museum": "🏛 Museum",
+    "outdoor": "🏞 Outdoor",
+    "tour": "🚶‍♀️ Tour",
+    "workshop": "🛠 Workshop",
+    "garden": "🌳 Garden",
+    "holiday": "🏖 Holiday",
+    "free": "🆓 Free",
+    "parade": "🎇 Parade",
+    "fair": "🎡 Fair",
+    "religion": "🙏 Religion",
+    "science": "🔬 Science",
+    "fashion": "👗 Fashion",
+    "seminar": "💼 Seminar",
+    "videogame": "🎮 Video game",
+    "boardgame": "🎲 Board game",
+    "copied": "Copied!",
+    "organizeit": "Organize it!",
+    "noresults": "You don't find the event of your dreams?",
+    "notloggedin": "You are not logged in",
+    "login": "Log in",
+    "logintofav": "Log in to save your favorites events",
+    "invalid": "Invalid username or password",
+    "logout": "Log out",
+    "nofavorites": "You don't have any favorite events yet",
+    "searchthem": "Search for them",
+    "addtofav": "Add to favorites",
+    "removefromfav": "Remove from favorites",
+    "showonmap": "Show on map",
+    "fromtoday": "From today",
+    "alldate": "Any day",
+    "week": "This week",
+    "month": "This month",
+    "alltime": "Any time",
+    "now": "Now",
+    "morning": "The morning",
+    "afternoon": "The afternoon",
+    "evening": "The evening",
+    "night": "The night",
+    "categories": "Categories",
+    "searchevents": "Search events...",
+    "moreinfo": "More info",
+    "language": "Language",
+    "navigatorlanguage": "Navigator language",
+    "at": "at",
+    "from": "from",
+    "to": "to",
+    "weather": "Weather",
+    "clear-sky": "Clear sky",
+    "mainly-clear": "Mainly clear",
+    "partly-cloudy": "Partly cloudy",
+    "overcast": "Overcast",
+    "fog": "Fog",
+    "depositing-rime-fog": "Depositing rime fog",
+    "light-drizzle": "Light drizzle",
+    "moderate-drizzle": "Moderate drizzle",
+    "dense-drizzle": "Dense drizzle",
+    "light-freezin": "Light freezing drizzle",
+    "dense freezin": "Dense freezing drizzle",
+    "slight-rain": "Slight rain",
+    "moderate-rain": "Moderate rain",
+    "heavy-rain": "Heavy rain",
+    "light-freezing rain": "Light freezing rain",
+    "heavy-freezing rain": "Heavy freezing rain",
+    "slight-snowfall": "Slight snowfall",
+    "moderate-snowfall": "Moderate snowfall",
+    "heavy-snowfall": "Heavy snowfall",
+    "snow-grains": "Snow grains",
+    "slight-rain-showers": "Slight rain showers",
+    "moderate-rain-showers": "Moderate rain showers",
+    "violent-rain-showers": "Violent rain showers",
+    "slight-snow-showers": "Slight snow showers",
+    "heavy-snow-showers": "Heavy snow showers",
+    "thunderstorm": "Thunderstorm",
+    "thunderstorm-with-slight-hail": "Thunderstorm with slight hail",
+    "thunderstorm-with-heavy-hail": "Thunderstorm with heavy hail",
+    "unknown": "Unknown",
+    "status": [
+        "Unknown",
+        "Programmed",
+        "Rescheduled",
+        "Moved online",
+        "Postponed",
+        "Full",
+        "Cancelled"
+    ],
+    "by": "by",
+    "contact": "Contact",
+    "registration": "Registration",
+    "sortbydate": "Sort by date",
+    "sortbyrelevance": "Sort by relevance",
+    "sortbypopularity": "Sort by popularity",
+    "sortbydistance": "Sort by distance",
     "loginwith": "Log in with",
     "loggingin": "Logging in...",
     "loggedin": "Logged in !",
@@ -122,6 +130,14 @@
     "retry": "Retry",
     "ok": "OK",
     "non representative": "Non representative image",
-    "install app": "Install the app",
-    "eg": "e.g."
+    "install_app": "Install the app",
+    "eg": "e.g.",
+    "about": "About",
+    "about_text": [
+        "What to do tonight? Where to go this weekend? What events are organized near me?",
+        "The Évents application allows you to find events near you, save them in your favorites and share them with your friends.",
+        "Évents is an open and collaborative platform so some information may be incorrect.",
+        "If you have any questions, suggestions or comments, do not hesitate to contact us at the following address:"
+    ],
+    "all_rights_reserved": "All rights reserved"
 }
