app: ajout d'une option pour ouvrir l'application de carte

--- a/front/public/langs/en.json
+++ b/front/public/langs/en.json
@@ -56,9 +56,10 @@
     "logout": "Log out",
     "nofavorites": "You don't have any favorite events yet",
     "searchthem": "Search for them",
-    "addtofav": "Add to favorites",
-    "removefromfav": "Remove from favorites",
-    "showonmap": "Show on map",
+    "add_fav": "Add to favorites",
+    "remove_fav": "Remove from favorites",
+    "show_on_map": "Show on map",
+    "open_map_app": "Open in map app",
     "fromtoday": "From today",
     "alldate": "Any day",
     "week": "This week",
