--- a/front/public/langs/fr.json
+++ b/front/public/langs/fr.json
@@ -56,9 +56,10 @@
     "nofavorites": "Tu n'as pas encore d'événements favoris",
     "searchthem": "Recherches-en !",
     "notloggedin": "Tu n'es pas connecté",
-    "addtofav": "Ajouter à mes favoris",
-    "removefromfav": "Retirer de mes favoris",
-    "showonmap": "Afficher sur la carte",
+    "add_fav": "Ajouter à mes favoris",
+    "remove_fav": "Retirer de mes favoris",
+    "show_on_map": "Afficher sur la carte",
+    "open_map_app": "Ouvrir sur l'appli de carte",
     "fromtoday": "À venir",
     "alldate": "Toute période",
     "week": "Cette semaine",
