--- a/front/public/langs/fr.json
+++ b/front/public/langs/fr.json
@@ -77,6 +77,8 @@
     "open_map_app": "Ouvrir sur l'appli de carte",
     "more_info": "Plus d'infos",
 
+    "show_map": "🗺 Carte",
+    "show_list": "🧾 Liste",
     "search_events": "Rechercher des évents...",
     "search_more_events": "Afficher plus d'évents",
     "from_today": "À venir",
